--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Gradle Properties
-org.gradle.jvmargs = -Xmx1G
-org.gradle.parallel = true
+org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 
 # Mod Properties
-version = 1.0.0+1.19
-maven_group = com.example
-archives_base_name = example_mod
+version=0.0.1+1.19
+maven_group=dev.ryanccn
+archives_base_name=damage_control
 
 # Dependencies are managed at gradle/libs.versions.toml
